Category (#21)
* feat: add category

* fix: handle category creation possible error
