# cmd/main.go
@@ -6,6 +6,7 @@ import (
 	"net/http"
 
 	"github.com/matheuslc/guiomar/src/basket"
+	"github.com/matheuslc/guiomar/src/category"
 	"github.com/matheuslc/guiomar/src/chef"
 	"github.com/matheuslc/guiomar/src/context"
 	"github.com/matheuslc/guiomar/src/food"
@@ -43,8 +44,9 @@ func main() {
 
 	router.HandleFunc("/api/chefs", chef.NewChefHandlerWrapper(app.ChefRepository)).Methods("POST")
 	router.HandleFunc("/api/foods", food.NewFoodHandlerWrapper(app.FoodRepository)).Methods("POST")
-	router.HandleFunc("/api/recipes", recipe.NewRecipeHandlerWrapper(app.RecipeRepository, app.FoodRepository, app.IngredientRepository)).Methods("POST")
+	router.HandleFunc("/api/recipes", recipe.NewRecipeHandlerWrapper(app.RecipeRepository, app.FoodRepository, app.IngredientRepository, app.CategoryRepository)).Methods("POST")
 	router.HandleFunc("/api/basket", basket.NewBasketHandlerWerapper(app.RecipeRepository)).Methods("POST")
+	router.HandleFunc("/api/category", category.NewCategorHandlerWrapper(app.CategoryRepository)).Methods("POST")
 
 	router.PathPrefix("/swagger/").Handler(httpSwagger.WrapHandler)
 
