# docs/swagger.json
@@ -44,6 +44,33 @@
                 "responses": {}
             }
         },
+        "/api/category": {
+            "post": {
+                "description": "You just need your name and your e-mail",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "chef"
+                ],
+                "summary": "Create a new category",
+                "parameters": [
+                    {
+                        "description": "Create a new category",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/category.CreateCategoryPayload"
+                        }
+                    }
+                ],
+                "responses": {}
+            }
+        },
         "/api/chefs": {
             "post": {
                 "description": "You just need your name and your e-mail",
@@ -138,6 +165,22 @@
                 }
             }
         },
+        "category.CreateCategoryPayload": {
+            "type": "object",
+            "properties": {
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
+        "category.SetCategoryPayload": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "string"
+                }
+            }
+        },
         "chef.createChefPayload": {
             "type": "object",
             "properties": {
@@ -220,6 +263,9 @@
         "recipe.createRecipePayload": {
             "type": "object",
             "properties": {
+                "category": {
+                    "$ref": "#/definitions/category.SetCategoryPayload"
+                },
                 "cook_duration": {
                     "type": "integer"
                 },
@@ -259,6 +305,9 @@
                     "type": "string"
                 },
                 "duration": {
+                    "type": "integer"
+                },
+                "order": {
                     "type": "integer"
                 }
             }
